2003-08-18  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/preferences.glade: Provide hotkeys for the new default view 
	options. 

2003-08-17  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Better behavior for the history menu.

2003-08-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Functional history submenu of the Go menu.

2003-08-16  Don Allingham  <dallingham@users.sourceforge.net>
	* configure.in: removal of intl.c/intl22.so
	* src/gramps.py: handling of i18n without the use of intl
	* src/*.py: switch from intl to gettext

2003-08-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: New tool icon
	* src/gramps_main.py: handle back/fwd buttons, disabling when
	not appropriate
	* src/people48.png: new image
	* src/family48.png: new image
	* src/tools.png: new image
	* src/Makefile.am: added tools.png for installation

2003-08-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Go menu with navigation items. Still have to 
	work out the history menu being built at runtime. Add few shortcuts. 
	* src/gramps_main.py (change_active_person): Small fix for disabling 
	back button. 
	* src/gramps_main.py: Add enabling/disabling for the new back/fwd menu
	items. 

2003-08-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FrenchRepublic.py: Insert encoding line because non-ascii
	charatcers are used. This behavior is deprecated and causes warnings 
	in python 2.3.
	* src/const.py.in: Likewise. 
	* src/FamilyView.py: Likewise. 
	* src/SelectChild.py: Likewise.
	* src/plugins/rel_ru.py: Likewise.
	* src/GrampsCfg.py: Fix toolbar prefs. 
	* src/intl.py: Import intl22.so for both 2.2 and 2.3 python versions.

2003-08-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: removed #! at top of file
	* src/gramps.py: removed #! at top of file
	* src/EditSource.py: removed #! at top of file

2003-08-14  Alexandre Duret-Lutz  <adl@gnu.org>